# employees-app

./: README.md  docker-compose.yaml  名称未設定ファイル.drawio
fastapi/: Dockerfile  README.md  data.json  pyproject.toml
fastapi/api/: db.py  main.py  migrate_db.py
fastapi/api/cruds/: employee.py
fastapi/api/models/: employee.py
fastapi/api/routers/: employee.py
fastapi/api/schemas/: employee.py
fastapi/test/: test_main.py
front-app/: Dockerfile  README.md  package.json
front-app/src/: App.vue  apiHelper.js  main.js
front-app/src/assets/: style.css
front-app/src/components/: EmployeeList.vue  EmployeeModal.vue
